tests/TypingSpec/valid/prog/lin-case.algst
data Maybe : TL (a:TL) = Just a | Nothing

fromMaybe : ∀(a:TL). (() -> a) -> Maybe a -> a
fromMaybe makeA m = case m of {
  Just a -> a,
  Nothing -> makeA ()
}
