tests/TypingSpec/invalid/types/case-session-multi.algst
\(c : ?(Int, Int).End!) -> case c of {
  (a, b) -> a + b
}
